# haitaka-usi

./: .gitattributes  Cargo.toml  LICENSE  README.md
src/: engine.rs  gui.rs  helpers.rs  lib.rs  main.rs  parser.rs  tests.rs  usi.pest  usi.rs
